--- a/video/list.html
+++ b/video/list.html
@@ -33,7 +33,7 @@
 
     var xhttp = new XMLHttpRequest();
 
-    xhttp.open('GET', 'http://localhost:8080/videos', true);
+    xhttp.open('GET', 'http://localhost:8080/video', true);
 
     xhttp.onreadystatechange = function() {
 
