--- a/index.html
+++ b/index.html
@@ -2,18 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gestión de Videos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            padding: 20px;
+        }
+
+        .container {
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        .btn-custom {
+            display: block;
+            width: 200px;
+            margin: 10px auto;
+            padding: 10px;
+            font-size: 16px;
+            text-align: center;
+            border-radius: 8px;
+            background-color: #007bff;
+            color: white;
+            transition: all 0.3s ease;
+        }
+
+        .btn-custom:hover {
+            background-color: #0056b3;
+            color: #f8f9fa;
+        }
+    </style>
 </head>
 <body>
 
-<a href="video/list.html">
-    Listar videos
-</a>
-<a href="video/add.html">
-    Adicionar videos
-</a>
-
-
-
+<div class="container">
+    <h1 class="mb-4">Gestión de Videos</h1>
+    <a href="video/list.html" class="btn-custom">Listar videos</a>
+    <a href="video/add.html" class="btn-custom">Adicionar videos</a>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
