--- a/video/add.html
+++ b/video/add.html
@@ -2,29 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Adicionar Nota</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light">
 
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow-sm">
+        <div class="card-header bg-primary text-white">
+          <h2 class="h4 text-center">Adicionar Nota</h2>
+        </div>
+        <div class="card-body">
+          <form>
+            <div class="mb-3">
+              <label for="code" class="form-label">Código:</label>
+              <input type="text" id="code" name="code" class="form-control" placeholder="Ingrese el código">
+            </div>
+            <div class="mb-3">
+              <label for="title" class="form-label">Título:</label>
+              <input type="text" id="title" name="title" class="form-control" placeholder="Ingrese el título">
+            </div>
+            <div class="mb-3">
+              <label for="description" class="form-label">Descripción:</label>
+              <textarea id="description" name="description" class="form-control" rows="3" placeholder="Ingrese la descripción"></textarea>
+            </div>
+            <div class="mb-3">
+              <label for="duration" class="form-label">Duración:</label>
+              <input type="text" id="duration" name="duration" class="form-control" placeholder="Ingrese la duración">
+            </div>
+            <div class="d-grid">
+              <button type="button" class="btn btn-primary" onclick="add();">Guardar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="text-center mt-3">
+        <a href="../index.html" class="text-secondary">Volver al inicio</a>
+      </div>
+    </div>
+  </div>
+</div>
 
-
-<h2>Adicionar nota</h2>
-
-<form >
-  <label for="code">Code:</label><br>
-  <input type="text" id="code" name="code" value=""><br>
-  <label for="title">Title:</label><br>
-  <input type="text" id="title" name="title" value=""><br><br>
-
-  <input type="button" value="Guardar" class="btn btn-primary" onclick="add();">
-</form>
-
-
-
-<a href="../index.html" class="link-secondary">Volver al inicio</a>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 <script>
