--- a/video/list.html
+++ b/video/list.html
@@ -2,26 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lista de Videos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light">
 
-
-<h1>Videos</h1>
-
-<table id="videos_table">
-  <thead>
-  <td>Cod.</td>
-  </thead>
-
-</table>
-
-
-<a href="../index.html">
-  Inicio
-</a>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col">
+      <h1 class="text-center text-primary mb-4">Lista de Videos</h1>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover table-striped">
+          <thead class="table-primary text-center">
+          <tr>
+            <th>Code</th>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Duration</th>
+          </tr>
+          </thead>
+          <tbody id="videos_table" class="text-center">
+          </tbody>
+        </table>
+      </div>
+      <div class="text-center mt-4">
+        <a href="../index.html" class="btn btn-secondary">Volver al inicio</a>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
